--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vercel/blob": "^0.27.3",
     "axios": "^1.8.3",
     "axios-retry": "^4.5.0",
+    "canvas": "^3.1.0",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -43,6 +44,7 @@
     "octokit": "^4.1.2",
     "openai": "^4.87.3",
     "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
     "pdf-parse-fork": "^1.2.0",
     "puppeteer": "^24.4.0",
     "react": "^19.0.0",
