Enhance job application and cover letter functionality
- Added new dependencies 'jspdf', 'marked', and 'pdfkit' to package.json and package-lock.json for improved PDF generation.
- Updated the job application API to include status handling and cover letter generation based on user profiles.
- Refactored cover letter and resume download routes to utilize new PDF conversion methods, ensuring better formatting and data handling.
- Implemented checks for job descriptions and user profiles to enhance error handling and user feedback during application submissions.
- Improved the JobDetailsClient to streamline cover letter generation by checking for existing applications before creating new ones.

--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "jspdf": "^3.0.1",
     "langchain": "^0.3.19",
     "lucide-react": "^0.482.0",
+    "marked": "^15.0.7",
     "next": "15.2.2",
     "next-auth": "^5.0.0-beta.25",
     "octokit": "^4.1.2",
@@ -46,6 +48,7 @@
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "pdf-parse-fork": "^1.2.0",
+    "pdfkit": "^0.16.0",
     "puppeteer": "^24.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -63,6 +66,7 @@
     "@types/cheerio": "^0.22.35",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.4",
+    "@types/pdfkit": "^0.13.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
