--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
-    "@langchain/core": "^0.2.36",
-    "@langchain/openai": "^0.0.14",
+    "@langchain/community": "^0.3.36",
+    "@langchain/core": "^0.3.42",
+    "@langchain/openai": "^0.4.5",
+    "@langchain/pinecone": "^0.2.0",
+    "@langchain/textsplitters": "^0.1.0",
     "@octokit/rest": "^21.1.1",
     "@pinecone-database/pinecone": "^5.1.1",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-pdf/renderer": "^4.3.0",
