--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ psycopg2-binary>=2.9.9
 django-storages>=1.14.2
 boto3>=1.34.69
 python-dotenv>=1.0.1
-openai>=1.12.0 
+openai>=1.12.0
+reportlab==4.1.0
+scikit-learn>=1.6.1 
