--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ openai>=1.12.0
 reportlab==4.1.0
 scikit-learn>=1.6.1
 djangorestframework-simplejwt>=5.3.1
+celery>=5.3.6
+redis>=5.0.1
 
 # Web Scraping
 selenium==4.18.1
