--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,10 +6,12 @@
   "permissions": [
     "activeTab",
     "scripting",
-    "storage"
+    "storage",
+    "tabs"
   ],
   "host_permissions": [
-    "http://localhost:8000/*"
+    "http://*/*",
+    "https://*/*"
   ],
   "action": {
     "default_popup": "popup.html",
@@ -23,7 +25,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["utils.js", "content.js"],
+      "run_at": "document_idle"
     }
   ],
   "background": {
