--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,9 @@ scikit-learn>=1.6.1
 djangorestframework-simplejwt>=5.3.1
 celery>=5.3.6
 redis>=5.0.1
+gunicorn>=21.2.0
+dj-database-url>=2.1.0
+whitenoise>=6.6.0
 
 # Web Scraping
 selenium==4.18.1
