--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,29 @@ redis>=5.0.1
 gunicorn>=21.2.0
 dj-database-url>=2.1.0
 whitenoise>=6.6.0
+django-sslserver>=0.22
 
 # Web Scraping
 selenium==4.18.1
 webdriver-manager==4.0.1
 beautifulsoup4==4.12.3
 requests==2.31.0
-undetected-chromedriver==3.5.5 
+undetected-chromedriver==3.5.5
+
+# Language Models and Vector Storage
+langchain>=0.1.12
+langchain-ollama>=0.0.3
+langchain-chroma>=0.0.15
+chromadb>=0.4.24
+
+# Django Extensions
+django-filter>=24.1
+drf-spectacular>=0.27.1
+
+# Development and Testing
+pytest>=8.1.1
+pytest-django>=4.8.0
+coverage>=7.4.4
+
+# Type Hints
+typing-extensions>=4.10.0 
