--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,9 @@ selenium==4.18.1
 webdriver-manager==4.0.1
 beautifulsoup4==4.12.3
 requests==2.31.0
-undetected-chromedriver==3.5.5 
+undetected-chromedriver==3.5.5
+
+# Google OAuth
+google-auth>=2.28.2
+google-auth-oauthlib>=1.2.0
+django-allauth>=0.61.1 
