--- a/requirements.txt
+++ b/requirements.txt
@@ -24,4 +24,5 @@ undetected-chromedriver==3.5.5
 # Google OAuth
 google-auth>=2.28.2
 google-auth-oauthlib>=1.2.0
-django-allauth>=0.61.1 
+django-allauth>=0.61.1
+google-generativeai==0.3.0 
