Update VSCode settings and enhance GoogleClient for improved response handling
- Changed Python auto-import completions setting to false for better control over imports.
- Updated the default formatter for Python files to use 'ms-python.black-formatter' for consistent code styling.
- Enhanced the GoogleClient's generate method to accept an optional response schema for validating JSON responses, improving error handling and response structure enforcement.
- Added type hints for better code clarity and maintainability.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,11 @@
         "source.organizeImports": "explicit"
     },
     "python.analysis.typeCheckingMode": "basic",
-    "python.analysis.autoImportCompletions": true,
+    "python.analysis.autoImportCompletions": false,
     "python.analysis.inlayHints.functionReturnTypes": true,
     "python.analysis.inlayHints.variableTypes": true,
     "[python]": {
         "editor.formatOnSave": true,
-        "editor.defaultFormatter": "ms-python.python"
+        "editor.defaultFormatter": "ms-python.black-formatter"
     }
 } 
