--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,15 @@ scikit-learn>=1.6.1
 djangorestframework-simplejwt>=5.3.1
 celery>=5.3.6
 redis>=5.0.1
+django-filter>=24.1
+drf-spectacular>=0.27.1
+django-cors-headers>=4.3.1
+langchain>=0.1.12
+langchain-core>=0.1.27
+langchain-community>=0.0.27
+langchain-ollama>=0.0.2
+langchain-chroma>=0.0.1
+gitpython>=3.1.42
 
 # Web Scraping
 selenium==4.18.1
