--- a/.pylintrc
+++ b/.pylintrc
@@ -4,7 +4,7 @@ persistent=yes
 load-plugins=
 
 [MESSAGES CONTROL]
-disable=C0111,R0903,C0103
+disable=C0111,R0903,C0103,W1203, E1101
 
 [FORMAT]
 max-line-length=100
