--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -6,8 +6,9 @@ services:
       context: ..
       dockerfile: .devcontainer/Dockerfile
     volumes:
-      - ../..:/workspace:cached
+      - ../..:/workspaces:cached
       - ~/.ssh:/home/vscode/.ssh:ro
+    # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/jobapplier
@@ -15,6 +16,8 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - FLOWER_BASIC_AUTH=admin:changeme123
+    # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
+    # network_mode: service:db
     depends_on:
       - db
       - redis
@@ -23,18 +26,18 @@ services:
       - "5555:5555" # Flower
       - "9090:9090" # Prometheus (optional)
 
+    # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
+    # (Adding the "ports" property to this file will not forward from a Codespace.)
+
   db:
     image: postgres:15-alpine
     restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
       POSTGRES_DB: jobapplier
-    ports:
-      - "5432:5432"
-
+      POSTGRES_PASSWORD: postgres
   redis:
     image: redis:7-alpine
     restart: unless-stopped
@@ -44,21 +47,22 @@ services:
       - "6379:6379"
     command: redis-server --appendonly yes
 
-  # Optional: Separate Celery containers for scaling
-  # celery-worker:
-  #   build:
-  #     context: ..
-  #     dockerfile: .devcontainer/Dockerfile
-  #   command: celery -A job_applier worker -l info
-  #   volumes:
-  #     - ../..:/workspace:cached
-  #   environment:
-  #     - DATABASE_URL=postgresql://postgres:postgres@db:5432/jobapplier
-  #     - REDIS_URL=redis://redis:6379/0
-  #   depends_on:
-  #     - db
-  #     - redis
-  #     - app
+    # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
+    # (Adding the "ports" property to this file will not forward from a Codespace.)
+  celery-worker:
+    build:
+      context: ..
+      dockerfile: .devcontainer/Dockerfile
+    command: celery -A job_applier worker -l info
+    volumes:
+      - ../..:/workspaces:cached
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/jobapplier
+      - REDIS_URL=redis://redis:6379/0
+    depends_on:
+      - db
+      - redis
+      - app
 
 volumes:
   postgres-data:
