--- a/fly.toml
+++ b/fly.toml
@@ -7,6 +7,7 @@ primary_region = "iad"
 [env]
   PORT = "8000"
   DJANGO_SETTINGS_MODULE = "job_applier.settings"
+  GIT_PYTHON_REFRESH = "quiet"
 
 [http_service]
   internal_port = 8000
