--- a/requirements.txt
+++ b/requirements.txt
@@ -41,16 +41,20 @@ undetected-chromedriver==3.5.5
 google-auth>=2.28.2
 google-auth-oauthlib>=1.2.0
 django-allauth>=0.61.1
-google-generativeai==0.3.0 
+google-genai>=1.11.0
 # Language Models and Vector Storage
 langchain>=0.1.12
 langchain-ollama>=0.0.3
 langchain-chroma>=0.0.15
 chromadb>=0.4.24
+langchain-google-genai>=2.1.2
+langchain-openai>=0.3.11
+langgraph>=0.4.1
 
 # Django Extensions
 django-filter>=24.1
 drf-spectacular>=0.27.1
+django-widget-tweaks>=1.5.0
 
 # Development and Testing
 pytest>=8.1.1
