Add DJANGO_SECRET_KEY support in Dockerfile and fly.toml for enhanced security
- Introduced DJANGO_SECRET_KEY as a build argument in fly.toml to securely pass the secret key during deployment.
- Set the SECRET_KEY environment variable in the Dockerfile to utilize the provided DJANGO_SECRET_KEY for Django applications.

--- a/fly.toml
+++ b/fly.toml
@@ -2,6 +2,8 @@ app = "job-applier-app"
 primary_region = "iad"
 
 [build]
+  [build.args]
+    DJANGO_SECRET_KEY="@60hffxk70=y*m3$@gc+b)5oiy!smc!y4qzji#o4c_xy=)^k97"
 
 [env]
   PORT = "8000"
